[build-system]
requires = ["setuptools", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[project]
name = "skyllh"

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "skyllh/_version.py",
    "versioneer.py",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["skyllh"]

[tool.ruff.lint.pydocstyle]
convention = "numpy" 

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
