[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "skyllh"
dynamic = ["version"]
description = "The SkyLLH framework is an open-source Python3-based package licensed under the GPLv3 license. It provides a modular framework for implementing custom likelihood functions and executing log-likelihood ratio hypothesis tests. The idea is to provide a class structure tied to the mathematical objects of the likelihood functions."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3+"}
authors = [
    {name = "Martin Wolf", email = "martin.wolf@tum.de"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "astropy",
    "matplotlib",
    "numpy",
    "pyyaml",
    "scipy",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/icecube/skyllh"
Documentation = "https://icecube.github.io/skyllh"
Issues = "https://github.com/icecube/skyllh/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest>=9.0.0",
]
docs = [
    "sphinx<9.0.0",
    "sphinx_rtd_theme",
    "nbsphinx",
    "ipython",
    "sphinxcontrib-apidoc",
    "sphinx-multiversion",
]
extras = [
    "iminuit",
    "pyarrow",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["skyllh*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["skyllh"]

[tool.ruff.lint.pydocstyle]
convention = "numpy" 

[tool.ruff.format]
quote-style = "single"

[tool.pytest]
minversion = "9.0"
addopts = ["-ra"]
testpaths = ["tests"]
