[metadata]
name = skyllh
description =The SkyLLH framework is an open-source Python3-based package licensed under the GPLv3 license. It provides a modular framework for implementing custom likelihood functions and executing log-likelihood ratio hypothesis tests. The idea is to provide a class structure tied to the mathematical objects of the likelihood functions, rather than to entire abstract likelihood models.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/icecube/skyllh
author_email = XXXXXXX
author = XXXXX
requires_python = >=3.8.0
license = GPL-3+

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://github.com/icecube/skyllh/issues
    Source Code = https://github.com/icecube/skyllh


[options]
packages = find:
install_requires =
    astropy
    numpy
    scipy
    iminuit
    matplotlib
tests_require =
    pytest
    pytest-codecov


[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = --color=yes --cov=skyllh --cov-report=term -ra --ignore=test --ignore=skyllh/_version.py
log_cli = 1
log_cli_level = INFO
testpaths = test 
norecursedirs = test


[versioneer]
VCS = git
style = pep440
versionfile_source = skyllh/_version.py
versionfile_build = None
tag_prefix = v
parentdir_prefix = skyllh-
